# tensorflow-playground

./: pyproject.toml
ann/: TF2_0_ANN_MNIST_(v3).ipynb  TF2_0_ANN_Regression_(v3).ipynb
linear/: TF2_0_Linear_Classification_(v3).ipynb  TF2_0_Linear_Regression_(v3).ipynb
