[project]
name = "tensorflow-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "tensorflow>=2.17.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
